// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getWorldStyle should return null for an undefined input 1`] = `
Object {
  "backgroundColour": "rgb(255,255,255)",
  "navBarType": "light",
  "progressBarType": "black",
  "source": Object {
    "testUri": "../../../assets/challenge-progress/squirrel.png",
  },
  "style": Object {
    "bottom": 0,
    "height": 900,
    "left": 0,
    "position": "absolute",
    "right": 0,
    "width": "100%",
  },
  "topBarType": "default",
}
`;

exports[`getWorldStyle should return null for an undefined input 2`] = `
Object {
  "backgroundColour": "rgb(255,255,255)",
  "navBarType": "light",
  "progressBarType": "black",
  "source": Object {
    "testUri": "../../../assets/challenge-progress/elephant.png",
  },
  "style": Object {
    "bottom": 0,
    "height": 900,
    "left": 0,
    "position": "absolute",
    "right": 0,
    "width": "100%",
  },
  "topBarType": "default",
}
`;

exports[`getWorldStyle should return null for an undefined input 3`] = `
Object {
  "backgroundColour": "rgb(255,255,255)",
  "instructionTextColour": "rgb(136,136,136)",
  "navBarType": "light",
  "progressBarType": "black",
  "source": Object {
    "testUri": "../../../assets/challenge-progress/bird.png",
  },
  "style": Object {
    "bottom": 0,
    "height": 1100,
    "left": 0,
    "position": "absolute",
    "right": 0,
    "width": "100%",
  },
  "topBarType": "default",
}
`;

exports[`getWorldStyle should return null for an undefined input 4`] = `
Object {
  "backgroundColour": "rgb(255,255,255)",
  "navBarType": "light",
  "progressBarType": "black",
  "source": Object {
    "testUri": "../../../assets/challenge-progress/ostrich.png",
  },
  "style": Object {
    "bottom": 0,
    "height": 1000,
    "left": 0,
    "position": "absolute",
    "right": 0,
    "width": "100%",
  },
  "topBarType": "default",
}
`;
